@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-22T00:33:24Z",
-  "count" : 336,
+  "timestamp" : "2022-08-22T08:07:34Z",
+  "count" : 184,
   "count_minmax" : [ 130, 365 ],
-  "count_decinc" : [ -29, +365 ],
-  "uniques" : 6,
-  "uniques_minmax" : [ 6, 9 ],
-  "uniques_decinc" : [ -3, +9 ]
+  "count_decinc" : [ -181, +365 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 9 ],
+  "uniques_decinc" : [ -7, +9 ]
 }
