@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-22T00:33:24Z",
-  "count" : 425,
-  "count_minmax" : [ 123, 425 ],
-  "count_decinc" : [ -0, +425 ],
+  "timestamp" : "2022-08-22T08:07:34Z",
+  "count" : 428,
+  "count_minmax" : [ 123, 428 ],
+  "count_decinc" : [ -0, +428 ],
   "uniques" : 17,
   "uniques_minmax" : [ 2, 17 ],
   "uniques_decinc" : [ -0, +17 ]
