@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-08-22T00:33:24Z",
+  "timestamp" : "2022-08-22T08:07:34Z",
   "count_outdated" : 51126,
   "uniques_outdated" : 773,
-  "count" : 56539,
-  "uniques" : 946,
+  "count" : 56511,
+  "uniques" : 945,
   "clones" : [
     {
       "timestamp": "2022-08-08T00:00:00Z",
-      "count": 336,
+      "count": 184,
       "count_minmax": [ 130, 365 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 9 ]
+      "uniques": 2,
+      "uniques_minmax": [ 2, 9 ]
     },
     {
       "timestamp": "2022-08-09T00:00:00Z",
@@ -98,10 +98,17 @@
     },
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 425,
-      "count_minmax": [ 123, 425 ],
+      "count": 428,
+      "count_minmax": [ 123, 428 ],
       "uniques": 17,
       "uniques_minmax": [ 2, 17 ]
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
+      "count": 121,
+      "count_minmax": [ 121, 121 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
