@@ -1,11 +1,11 @@
 {
-  "count": 5413,
-  "uniques": 84,
+  "count": 5385,
+  "uniques": 83,
   "clones": [
     {
       "timestamp": "2022-08-08T00:00:00Z",
-      "count": 336,
-      "uniques": 6
+      "count": 184,
+      "uniques": 2
     },
     {
       "timestamp": "2022-08-09T00:00:00Z",
@@ -69,8 +69,13 @@
     },
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 425,
+      "count": 428,
       "uniques": 17
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
+      "count": 121,
+      "uniques": 3
     }
   ]
 }
