@@ -1,3 +1,10 @@
+2022-08-22T08:07:34Z:
+* notice: last 14d: unq all: 83 5385
+* notice: prev accum: outdated-unq outdated-all / unq all: 773 51126 / 946 56539
+* notice: next accum: outdated-unq outdated-all / unq all: 773 51126 / 945 56511
+* notice: prev exec diff / last date diff / accum: unq all: +3 +124 -4 -152 / +3 +121 -0 -0 / 3 121
+* notice: removed / changed dates: [] / [2022-08-08 2022-08-21 2022-08-22]
+
 2022-08-22T00:33:24Z:
 * notice: last 14d: unq all: 84 5413
 * notice: prev accum: outdated-unq outdated-all / unq all: 765 50876 / 941 56237
